# TTS-Studio

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: python-package.yml
docs/: index.md
docs/tts_studio/: cli.md  parsers.md  processor.md  utils.md
kokoro_tts/: cli.py  parsers.py  processor.py  utils.py
search/: search_index.json
tts_studio/: __init__.py  cli.py  processor.py
tts_studio/cli/: index.html
tts_studio/parsers/: index.html
tts_studio/processor/: index.html
tts_studio/utils/: index.html
