[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-studio"
version = "1.0.0"
description = "A modular high-quality TTS CLI using the Kokoro API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "kokoro",
  "soundfile",
  "sounddevice",
  "torch",
  "click",
  "numpy",
  "EbookLib",
  "beautifulsoup4",
  "pymupdf4llm",
  "pymupdf",
  "nltk>=3.9.3",
  "pymupdf-layout>=1.27.1",
  "pydub>=0.25.1",
  "mkdocstrings-python>=2.0.3",
  "black>=26.1.0",
  "mkdocs-awesome-pages-plugin>=2.10.1",
  "mkdocs-material>=9.7.4",
]

[project.scripts]
tts-studio = "tts_studio.cli:main"
